FullQa New/src/PS Enterprise/objects/Backlog_Calculation__c.object
<CustomObject>
    <customHelpPage>BacklogCalculationHelp</customHelpPage>
    <description>Stores projected billings from projects over a period of time for regions, practices, and groups. Revenue data can come from billable assignments or milestones. Backlog calculations contain child backlog detail records, which contain the actual backlog data.</description>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <description>An internal field used by PSE - not intended for display to users.</description>
        <externalId>true</externalId>
        <inlineHelpText>An internal field used by PSE - not intended for display to users.</inlineHelpText>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_Project_Backlog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to calculate backlog for projects contained in the region, practice, or group.</description>
        <inlineHelpText>Whether to calculate backlog for projects contained in the region, practice, or group.</inlineHelpText>
        <label>Calculate Project Backlog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Fields_for_Current_Time_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Fields for Current Time Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>The end date for backlog calculations. If no end date is specified, all records from the start date will be processed. This is recommended when calculating unscheduled backlog.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Details__c</fullName>
        <description>Details of errors that occurred during processing. Not intended for display.</description>
        <label>Error Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Grp__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Include_Sublevels__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Whether to calculate backlog for all sub levels of the selected region, practice, or group. This field is ignored if backlog is calculated only for a resource.</inlineHelpText>
        <label>Include Sublevels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Report_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not currently used.</description>
        <label>Is Report Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Process_Batch_Id__c</fullName>
        <description>Internal PSE field - not intended for display.</description>
        <externalId>true</externalId>
        <label>Post Process Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>Practice__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Proj__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not currently used.</description>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Backlog Calculations</relationshipLabel>
        <relationshipName>Backlog_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reuse_Detail_Objects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reuse Detail Objects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Calculating_From__c</fullName>
        <inlineHelpText>Setting this value will set the start date field automatically</inlineHelpText>
        <label>Start Calculating From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start of this week</fullName>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
                <value>
                    <fullName>Start of next week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Post Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error Occurred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Period_Types__c</fullName>
        <description>The types of time periods to calculate backlog for. NOTE: these values should match the values for Time Period.Type</description>
        <label>Time Period Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Backlog Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Practice__c</columns>
        <columns>Group__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Backlog Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Backlog Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>check_end_date</fullName>
        <active>true</active>
        <description>End date cannot occur before start date</description>
        <errorConditionFormula>AND(NOT(ISNULL(End_Date__c)),End_Date__c &lt; Start_Date__c)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date cannot occur before start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>only_one_source_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
  AND(LEN(Region__c)&gt;0, 
    OR(LEN(Practice__c)&gt;0,LEN(Group__c)&gt;0,LEN(Project__c)&gt;0) ),
  AND(LEN(Practice__c)&gt;0, 
    OR(LEN(Region__c)&gt;0,LEN(Group__c)&gt;0,LEN(Project__c)&gt;0) ),
  AND(LEN(Group__c)&gt;0, 
    OR(LEN(Region__c)&gt;0,LEN(Practice__c)&gt;0,LEN(Project__c)&gt;0) ),
  AND(LEN(Project__c)&gt;0, 
    OR(LEN(Region__c)&gt;0,LEN(Group__c)&gt;0,LEN(Group__c)&gt;0) )
)</errorConditionFormula>
        <errorMessage>Only one of Region, Practice, Group, or Project may be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>source_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Region__c), ISBLANK(Practice__c), ISBLANK(Group__c), ISBLANK(Project__c))</errorConditionFormula>
        <errorMessage>One of Region, Practice, Group, or Project is required</errorMessage>
    </validationRules>
</CustomObject>